--- a/rocket-planner/manifest.json
+++ b/rocket-planner/manifest.json
@@ -12,6 +12,9 @@
             "128": "images/icons128.png"
         }
     },
+    "permissions": [
+        "storage"
+    ],
     "icons" :{
         "16": "images/icons16.png",
         "32": "images/icons32.png",
