--- a/rocket-planner/manifest.json
+++ b/rocket-planner/manifest.json
@@ -13,7 +13,8 @@
         }
     },
     "permissions": [
-        "storage"
+        "storage",
+        "tabs"
     ],
     "icons" :{
         "16": "images/icons16.png",
