--- a/rocket-planner/manifest.json
+++ b/rocket-planner/manifest.json
@@ -14,8 +14,12 @@
     },
     "permissions": [
         "storage",
-        "tabs"
+        "tabs",
+        "contextMenus"
     ],
+    "background": {
+        "service_worker": "js/background.js"
+    },
     "icons" :{
         "16": "images/icons16.png",
         "32": "images/icons32.png",
